Fix native android after aligning RN/React to Expo SDK 54

--- a/app.json
+++ b/app.json
@@ -67,7 +67,9 @@
         {
           "photosPermission": "FoodSnap needs access to your photos to analyze food images."
         }
-      ]
+      ],
+      "expo-font",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
