--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "2.0.2",
-    "@shopify/react-native-skia": "2.2.12",
     "date-fns": "^4.1.0",
     "expo": "^54.0.31",
     "expo-blur": "~15.0.8",
@@ -52,7 +51,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.7.1",
     "sharp": "^0.34.5",
     "victory-native": "^41.20.2",
     "zustand": "^5.0.9"
