--- a/eas.json
+++ b/eas.json
@@ -5,12 +5,10 @@
   "build": {
     "production": {
       "android": {
-        "buildType": "app-bundle",
-        "newArchEnabled": false
+        "buildType": "app-bundle"
       },
       "env": {
-        "NPM_CONFIG_LEGACY_PEER_DEPS": "true",
-        "EX_UPDATES_NATIVE_DEBUG": "0"
+        "NPM_CONFIG_LEGACY_PEER_DEPS": "true"
       }
     }
   },
