--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "expo": "^54.0.31",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "^1.0.10",
     "expo-camera": "^17.0.10",
     "expo-constants": "~17.1.7",
     "expo-device": "^8.0.10",
