--- a/package.json
+++ b/package.json
@@ -12,46 +12,46 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@shopify/flash-list": "^2.2.0",
+    "@shopify/flash-list": "2.0.2",
     "date-fns": "^4.1.0",
     "expo": "^54.0.31",
-    "expo-blur": "~14.1.5",
+    "expo-blur": "~15.0.8",
     "expo-build-properties": "^1.0.10",
     "expo-camera": "^17.0.10",
-    "expo-constants": "~17.1.7",
+    "expo-constants": "~18.0.13",
     "expo-device": "^8.0.10",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
     "expo-image-picker": "^17.0.10",
-    "expo-linking": "~7.1.7",
+    "expo-linking": "~8.0.11",
     "expo-localization": "^17.0.8",
     "expo-notifications": "^0.32.15",
-    "expo-router": "~5.1.4",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
+    "expo-router": "~6.0.21",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "i18next": "^25.7.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "^16.5.0",
-    "react-native": "0.79.5",
+    "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-purchases": "^9.6.14",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets-core": "^1.6.2",
     "sharp": "^0.34.5",
     "victory-native": "^41.20.2",
