--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.7.1",
     "react-native-worklets-core": "^1.6.2",
     "sharp": "^0.34.5",
     "victory-native": "^41.20.2",
