Add backend URL for production

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EXPO_PUBLIC_BACKEND_URL=https://food-analyzer-92.preview.emergentagent.com
+EXPO_PUBLIC_BACKEND_URL=https://app.emergent.sh/share?app=food-analyzer-92
 EXPO_PUBLIC_REVENUECAT_ANDROID_KEY=goog_THTRlzNThDYNTSMPoaHrQOaiRgq
 EXPO_PUBLIC_REVENUECAT_IOS_KEY=your_revenuecat_ios_api_key
 EXPO_PUBLIC_REVENUECAT_ENTITLEMENT=premium
